--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
     </head>
     <body>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <div id ="Aboutcolor"><li>About</li></div>
+<li><a href="index.html">Home</a></li>
+        <li><a href="calculator.html">Calculator</a></li>
     </ul><br>
         <div id ="homepage">
         <h1>About</h1>
