--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     </head>
     <body>
     <ul>
-        <li>Home</li>
-        <div id ="Aboutcolor"><li><a href="about.html">About</a></li></div>
+          <li>Home</li>
+       <li><a href="about.html">About</a></li>
+        <li><a href="calculator.html">Calculator</a></li>
     </ul><br>
         <div id ="homepage">
         <h1>HomePage</h1>
